# flipper_trainer

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: my_turtlebot2_maze_params.yaml
launch/: start_training.launch
scripts/robot_envs/: markhor_env.py
scripts/task_envs/: climb_stair.py
