<?xml version="1.0"?>
<package format="2">
  <name>flipper_trainer</name>
  <version>0.0.0</version>
  <description>The flipper_trainer package</description>

  <maintainer email="capra@clubcapra.com">Capra</maintainer>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
